--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -20,10 +20,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Docker image
-        run: docker build -t simple-ai-agent-frontend:${{ github.sha }} ./frontend
+        run: docker build -t agent-frontend:1.0.0 ./frontend
 
       - name: Save Docker image as tar
-        run: docker save simple-ai-agent-frontend:${{ github.sha }} -o frontend.tar
+        run: docker save agent-frontend:1.0.0 -o frontend.tar
 
       - name: Set permissions for frontend.tar
         run: chmod 644 $GITHUB_WORKSPACE/frontend.tar
@@ -48,9 +48,5 @@ jobs:
           script: |
             docker load -i ~/frontend.tar
             cd ~/llm-ai-project/simple-ai-agent
-            export FRONTEND_IMAGE_TAG=${{ github.sha }}
-            docker compose up -d --no-deps --build frontend
-            rm -rf ~/frontend.tar
-            export FRONTEND_IMAGE_TAG=${{ github.sha }}
             docker compose up -d --no-deps --build frontend
             rm -rf ~/frontend.tar
