--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -46,7 +46,6 @@ jobs:
           username: ${{ secrets.VM_USER }}
           key: ${{ secrets.VM_SSH_KEY }}
           script: |
-            docker load -i ~/frontend.tar
+            docker load -i ~/frontend.tar/frontend.tar
             cd ~/llm-ai-project/simple-ai-agent
             docker compose up -d --no-deps --build frontend
-            rm -rf ~/frontend.tar
