fix: pseudo commit

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -25,14 +25,11 @@ jobs:
       - name: Save Docker image as tar
         run: docker save agent-backend:1.0.0 -o backend.tar
 
-      - name: chow tar file size
-        run: ls -lh backend.tar
-
       - name: Set permissions for backend.tar
         run: chmod 644 $GITHUB_WORKSPACE/backend.tar
 
-      - name: Compress Docker image tarball
-        run: gzip -c backend.tar > backend.tar.gz
+      - name: size backend.tar
+        run: ls -lh backend.tar
 
       - name: Copy image to VM
         uses: appleboy/scp-action@v0.1.6
@@ -41,8 +38,8 @@ jobs:
           port: 2222
           username: ${{ secrets.VM_USER }}
           key: ${{ secrets.VM_SSH_KEY }}
-          source: backend.tar.gz
-          target: ~/backend.tar.gz
+          source: backend.tar
+          target: ~/backend.tar
 
       - name: Load image and deploy via SSH
         uses: appleboy/ssh-action@v0.1.6
@@ -52,7 +49,6 @@ jobs:
           username: ${{ secrets.VM_USER }}
           key: ${{ secrets.VM_SSH_KEY }}
           script: |
-            gunzip -f ~/backend.tar.gz
-            docker load -i ~/backend.tar
+            docker load -i ~/backend.tar/backend.tar
             cd ~/llm-ai-project/simple-ai-agent
             docker compose up -d --no-deps --build agent
